test/libsolidity/syntaxTests/array/length/invalid_expression_1.sol
contract C {
    uint[-true] ids;
}
// ----
// TypeError 5462: (22-27): Invalid array length, expected integer literal or constant expression.
